improve the website

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="container">
         <div class="logo">
           <a href="https://snapp.md/">
-            <img src="/SNApp.svg" alt="SNApp Logo" class="logo-img" />
+            <img src="/assets/SNApp.svg" alt="SNApp Logo" class="logo-img" />
             <span class="logo-text">SNApp</span>
           </a>
         </div>
@@ -34,7 +34,7 @@
           <h1 class="hero-title">Simple Markdown Notes<br/>for Power Users</h1>
           <p class="hero-subtitle">A fast, efficient, and open-source note-taking application built for those who demand more from their tools.</p>
           <div class="hero-actions">
-            <a href="https://app.snapp.md/" rel="nofollow" target="_blank" class="btn btn-primary">Get Started</a>
+            <a href="https://app.snapp.md/" rel="noopener nofollow" target="_blank" class="btn btn-primary">Get Started</a>
             <a href="https://github.com/SNApp-notes/web" target="_blank" class="btn btn-secondary">View on GitHub</a>
           </div>
         </div>
@@ -52,7 +52,7 @@
               <div class="browser-title">SNApp</div>
             </div>
             <div class="browser-content">
-              <img src="/public/screenshot.png" class="screenshot-img" alt="SNApp Notes App Interface Screenshot" />
+              <img src="/assets/screenshot.png" class="screenshot-img" alt="SNApp Notes App Interface Screenshot" />
             </div>
           </div>
         </div>
@@ -63,9 +63,9 @@
           <h2 class="section-title">Built for Power Users</h2>
           <div class="features-grid">
             <div class="feature-card">
-              <div class="feature-icon">⚡</div>
-              <h3 class="feature-title">Lightning Fast</h3>
-              <p class="feature-description">Instant search across all notes with full-text search capabilities and snippet previews.</p>
+              <div class="feature-icon">✨</div>
+              <h3 class="feature-title">Minimalistic</h3>
+              <p class="feature-description">A clean, distraction-free interface that lets you focus on what matters—your notes.</p>
             </div>
             <div class="feature-card">
               <div class="feature-icon">📝</div>
@@ -105,16 +105,15 @@
               <p class="about-description">Whether you're a developer, writer, researcher, or anyone who takes notes seriously, SNApp provides the speed and simplicity you need without compromising on features.</p>
               <a href="https://github.com/SNApp-notes/web" target="_blank" class="btn btn-primary">Contribute on GitHub</a>
             </div>
+            <!--
             <div class="about-features">
               <ul class="about-list">
-                <li>✓ No account required</li>
-                <li>✓ Local-first storage</li>
-                <li>✓ No tracking or analytics</li>
                 <li>✓ Regular updates</li>
                 <li>✓ Active community</li>
                 <li>✓ Cross-platform support</li>
               </ul>
             </div>
+            -->
           </div>
         </div>
       </section>
@@ -122,11 +121,11 @@
 
     <footer class="footer">
       <div class="container">
-        <p class="footer-text">© 2025 SNApp. Open source under AGPL-3.0 license.</p>
+        <p class="footer-text">© 2025 <a href="https://jakub.jankiewicz.org">Jakub T. Jankiewicz</a>. Open source under AGPL-3.0 license.</p>
         <div class="footer-links">
           <a href="https://github.com/SNApp-notes/web" target="_blank" class="footer-link">GitHub</a>
           <a href="https://github.com/SNApp-notes/web/issues" target="_blank" class="footer-link">Issues</a>
-          <a href="https://snapp.md" class="footer-link">snapp.md</a>
+          <a href="https://snapp.md" rel="noopener nofollow" class="footer-link">snapp.md</a>
         </div>
       </div>
     </footer>
