--- a/index.html
+++ b/index.html
@@ -2,14 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/SNApp.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="SNApp - A Simple Markdown Notes App for power users. Open source, desktop-first note-taking application." />
     <title>SNApp - Simple Markdown Notes App for Power Users</title>
     <link rel="stylesheet" href="/style.css" />
-    <meta property="og:image" content="https://bolt.new/static/og_default.png">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:image" content="https://bolt.new/static/og_default.png">
+    <link rel="manifest" href="https://app.snapp.md/site.webmanifest" />
+    <link rel="icon" href="https://app.snapp.md/favicon.ico" sizes="any" />
+    <link rel="icon" href="https://app.snapp.md/favicon-16x16.png" sizes="16x16" type="image/png" />
+    <link rel="icon" href="https://app.snapp.md/favicon-32x32.png" sizes="32x32" type="image/png" />
+    <link rel="apple-touch-icon" href="https://app.snapp.md/apple-touch-icon.png" />
+    <link rel="mask-icon" href="https://app.snapp.md/safari-pinned-tab.svg" color="#5bbad5" />
   </head>
   <body>
     <header class="header">
