add social card

--- a/index.html
+++ b/index.html
@@ -12,6 +12,26 @@
     <link rel="icon" href="https://app.snapp.md/favicon-32x32.png" sizes="32x32" type="image/png" />
     <link rel="apple-touch-icon" href="https://app.snapp.md/apple-touch-icon.png" />
     <link rel="mask-icon" href="https://app.snapp.md/safari-pinned-tab.svg" color="#5bbad5" />
+ 
+     <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://snapp.md/" />
+    <meta property="og:title" content="SNApp - Simple Markdown Notes for Power Users" />
+    <meta property="og:description" content="A fast, efficient, and open-source note-taking app built for power users. Minimalistic Markdown support, keyboard-first navigation, smart filters, and desktop-first productivity. Free under AGPL-3.0 – contribute on GitHub!" />
+    <meta property="og:image" content="https://snapp.md/assets/snapp.png" />
+    <meta property="og:image:alt" content="SNApp – Minimalistic Markdown notes interface with syntax highlighting" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="628" />
+    <meta property="og:site_name" content="SNApp" />
+    <meta property="og:locale" content="en_US" />
+
+    <!-- Twitter / X Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:creator" content="@jcubic">
+    <meta name="twitter:title" content="SNApp - Simple Markdown Notes for Power Users">
+    <meta name="twitter:description" content="Fast, open-source Markdown notes app for developers & writers. Distraction-free editing, keyboard shortcuts, smart search. Built for speed – try it free!">
+    <meta name="twitter:image" content="https://snapp.md/assets/snapp.png">
+    <meta name="twitter:image:alt" content="SNApp – Clean, powerful Markdown notes app for power users">
   </head>
   <body>
     <header class="header">
